gcc/testsuite/rust/rustc/ui/traits/trait-impl-for-module.rs
mod a {
}

trait A {
}

impl A for a { // { dg-error ".E0573." "" { target *-*-* } }
}

fn main() {
}

